@@ -1,6 +1,7 @@
 pyrobase (0.5.1) precise; urgency=low
 
   * Removed support for Python 2.6
+  * New module 'osutil'
 
  -- pyroscope <pyroscope.project@gmail.com>  Sun, 23 Jul 2017 15:45:53 +0200
 
